--- a/src/Labs/Lab2/index.css
+++ b/src/Labs/Lab2/index.css
@@ -1,7 +1,8 @@
 /* p {
-    background-color: blue;
-    color: white;
+   background-color: blue;
+   color: white;
 } */
+
 p#wd-id-selector-1 {
    background-color: red;
    color: white;
@@ -10,6 +11,11 @@ p#wd-id-selector-1 {
 p#wd-id-selector-2 {
    background-color: yellow;
    color: black;
+}
+
+.wd-class-selector {
+   background-color: yellow;
+   color: blue;
 }
 
 .wd-selector-1 .wd-selector-3 {
@@ -104,19 +110,6 @@ p#wd-id-selector-2 {
    padding: 50px;
 }
 
-.wd-margin-bottom {
-   margin-bottom: 50px;
-}
-
-.wd-margin-right-left {
-   margin-left: 50px;
-   margin-right: 50px;
-}
-
-.wd-margin-all-around {
-   margin: 30px;
-}
-
 .wd-rounded-corners-top {
    border-top-left-radius: 40px;
    border-top-right-radius: 40px;
@@ -192,64 +185,4 @@ p#wd-id-selector-2 {
 
 .wd-zindex-bring-to-front {
    z-index: 10;
-}
-
-.wd-float-left {
-   float: left;
-}
-
-.wd-float-right {
-   float: right;
-   height: 100px;
-}
-
-.wd-float-done {
-   clear: both;
-}
-
-.wd-grid-row {
-   clear: both;
-}
-
-.wd-grid-col-half-page {
-   width: 50%;
-   float: left;
-}
-
-.wd-grid-col-third-page {
-   width: 33%;
-   float: left;
-}
-
-.wd-grid-col-two-thirds-page {
-   width: 67%;
-   float: left;
-}
-
-.wd-grid-col-left-sidebar {
-   width: 20%;
-   float: left;
-}
-
-.wd-grid-col-main-content {
-   width: 60%;
-   float: left;
-}
-
-.wd-grid-col-right-sidebar {
-   width: 20%;
-   float: left;
-}
-
-.wd-flex-row-container {
-   display: flex;
-   flex-direction: row;
-}
-
-.wd-flex-grow-1 {
-   flex-grow: 1;
-}
-
-.wd-width-75px {
-   width: 75px;
 }
